--- a/.babelrc
+++ b/.babelrc
@@ -3,7 +3,7 @@
     "es2015",
     "react"
   ],
-  plugins: [   
-     ["import", {libraryName: "antd"}]
+  plugins: [
+    ["import", {"libraryName": "antd", "style": "css"}]
   ]  
 }
